--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.1",
     "@types/leaflet": "^1.9.18",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.10.0",
